# plstatus

./: .gitignore  Cargo.toml  Makefile  README.md  config.def.json  config.h  go.mod  make-config.py  plstatus.c  plstatus.h
cfg/: make-config.py
hs/: plstatus.h
src/: component.rs  config.rs  main.rs  plstatus.c  plstatus.h  utils.rs
src/cmd/: main.go
src/pkg/component/: model.go  run.go
src/pkg/config/: config.go  model.go
src/pkg/utils/: utils.go
src/pkg/xorg/: bar.go
